# simple-pos

./: .cursorrules  .dockerignore  .env.enterprise  .gitignore  .npmrc  .postcssrc.json  .prettierignore  .releaserc.json  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  AUTH_SERVICE_TEST_DOCUMENTATION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CORE_SERVICES_TEST_SUMMARY.md  GUARD_TESTS_SUMMARY.md  IMPLEMENTATION_STATUS.md  INITIALIZATION_STATUS.md  NEXT_PHASE.md  PHASE_2_COMPLETE.md  PHASE_2_SUMMARY.md  PHASE_2_TEST_GUIDE.md  PROGRESS_DIAGRAM.md  PROJECT_INITIALIZED.md  QUICK_REFERENCE_CORE_TESTS.md  QUICK_START.md  README.md  SERVICE_TESTS_SUMMARY.md  SETUP.md  SQLITE_REPOSITORY_TESTS_SUMMARY.md  SQLITE_TESTS_QUICK_REFERENCE.md  TASK_COMPLETE.md  VERIFICATION.md  ai-mvp-execution-plan.md  angular.json  eslint.config.mjs  jest.preset.js  nx.json  package-lock.json  (+13 more)
.agent/: rules.md
.github/: copilot-instructions.md
docs/: COVERAGE_VISUAL_SUMMARY.md  PRIORITY_TEST_FILES.md  README_TESTING.md  TEST_COVERAGE_ANALYSIS.md  architecture.md  environment-configuration-implementation.md  hybrid-saas-roadmap.md  implementation-status.md  nx-monorepo-migration-plan.md  prd.md  saas-onprem-transformation.md  technical-details.md
public/: manifest.webmanifest
scripts/: 010-group-repositories-by-entity.sh  Dockerfile.linux  analyze-bundle.sh  build-linux-docker.sh  reset-db.js  run-test-ci.js  update-project-version.js  (+1 more)
src-tauri/: Cargo.toml  SIGNING.md  tauri.conf.json
src-tauri/migrations/: 001_initial.sql  002_complete_schema.sql
src-tauri/src/: main.rs
(+819 files in other folders)
